sfg: Replacement for pcmprint. Both C and JS

--- a/src/tool/synthwerk/www/index.html
+++ b/src/tool/synthwerk/www/index.html
@@ -3,5 +3,6 @@
 <title>Egg Synthwerk</title>
 <link rel="stylesheet" href="./synthwerk.css"/>
 <script type="module" src="./bootstrap.js"></script>
+</script>
 </head><body>
 </body></head>
