--- a/src/web/index.html
+++ b/src/web/index.html
@@ -20,6 +20,8 @@ html {
 canvas {
   background-color: #000;
   cursor: none;
+  min-width: 640px; /* entirely debatable */
+  image-rendering: pixelated; /* '' */
 }
 .hidden {
   display: none;
